Fix Time Gap and Cleaned up code

--- a/src/App.css
+++ b/src/App.css
@@ -38,7 +38,7 @@ input[name="indicval"] {
   background-color: transparent;
   font-size: 2.5em;
   padding-right: calc(50vw - 1.25em);
-  margin-left: calc(50vw - 1.25em);
+  margin-left: calc(50vw - 2em);
   margin-top: 0.1em;
   margin-bottom: -1.1em;
 }
